Bug 90659 - FILESAVE: Libreoffice Calc .ods format very slow when saving
Summary: FILESAVE: Libreoffice Calc .ods format very slow when saving
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.7.2 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.2.0
Keywords: perf
: 82923 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-16 17:35 UTC by Jeffrey
Modified: 2019-03-01 10:44 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Test file for FILESAVE (78.30 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-04-17 17:59 UTC, Jeffrey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeffrey 2015-04-16 17:35:03 UTC
I have a spreadsheet with about 300 sheets and each sheet contains some data and formula calculating the mean and the standard deviation of the data. It takes about 25-30 seconds to save the file every time, even after a minor change of a cell.

I am using LibreOffice 4.2.7.2 on Ubuntu 14.04.

If I convert the same file into MS Excel .xlsx format then open it in MS Office in Windows, the file can be saved instantly after a minor change.
Comment 1 Jeffrey 2015-04-16 19:21:43 UTC
I updated my LibreOffice via Launchpad PPA to 4.4.2.2, but the issue still exists. I was wondering if the formula of calculating mean and standard deviation in each sheet causes the slow file save.
Comment 2 Jeffrey 2015-04-16 19:42:49 UTC
Actually, the upgrade to 4.4.2.2 seems to have fixed the issue. However, the first time when LibreOffice saves the file, it still takes about 25-30 seconds, but after that the file is saved almost instantly.
Comment 3 Jeffrey 2015-04-17 13:55:54 UTC
I think I jumped the gun by saying the issue was fixed by the upgrade. The issue still exists. After I added another sheet, the file save issue came back. Sorry.
Comment 4 raal 2015-04-17 15:39:22 UTC Comment hidden (obsolete)
Comment 5 Jeffrey 2015-04-17 17:59:41 UTC
Created attachment 114869 [details]
Test file for FILESAVE
Comment 6 Jeffrey 2015-04-17 18:02:10 UTC
Here are the steps to replicate the issue:
1. Open the attached file with Calc
2. Go to the last sheet "Test 294" and right-click it and choose "Move/Copy Sheet", then choose "Copy". Name the new sheet, say "Test 295".
3. Save the file. It will take about 25-30 seconds to finish.

Hope this helps.
Comment 7 raal 2015-04-17 18:35:00 UTC
I can confirm with Version: 4.5.0.0.alpha0+
Build ID: 51e0d789c344547956764c3b5f0ef5a304f4e0aa
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-13_16:58:45

excel save < 1 sec, LO save ~20 sec (i5, 6GB RAM, SSD)
Comment 8 Robinson Tryon (qubit) 2015-12-09 18:08:06 UTC Comment hidden (obsolete)
Comment 9 Commit Notification 2016-04-14 05:36:04 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=44c1cfc7d8ab7afb1e01ac57d3feeb410ba43748

no need to call rowHidden and rowFiltered repeatedly, tdf#90659

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Michael Meeks 2019-03-01 10:44:33 UTC
*** Bug 82923 has been marked as a duplicate of this bug. ***