no need to call rowHidden and rowFiltered repeatedly, tdf#90659

Change-Id: Ie104a0d6c2ee0a88363fb461762e2bcca00976dd